--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:antcontroller]
+[platformio]
+default_envs = antcontroller
+
+[env]
 platform = espressif32
-board = featheresp32
+board = antcontroller_r10
 framework = arduino
 board_build.filesystem = littlefs
 board_build.partitions = default.csv
-lib_deps = 
-    https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
-    hideakitai/PCA95x5@^0.1.1
-	https://github.com/hspsh/commonFwUtils
-	https://github.com/cr1tbit/alfalog
 
 monitor_speed = 115200
 upload_speed = 921600
@@ -26,4 +24,18 @@ upload_speed = 921600
 build_type = debug
 monitor_filters = esp32_exception_decoder
 
-; test_framework = googletest
+[env:antcontroller]
+lib_deps =
+    https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
+    hideakitai/PCA95x5@^0.1.1
+	https://github.com/hspsh/commonFwUtils
+	https://github.com/cr1tbit/alfalog
+
+[env:antcontroller-local]
+lib_deps =
+    https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
+    hideakitai/PCA95x5@^0.1.1
+    fmtlib/fmt@^8.1.1
+    adafruit/Adafruit SSD1306@^2.5.7
+	alfalog
+    commonFwUtils
