add toml parsing, edit esp memory layout so it can actually fit

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = espressif32
 board = antcontroller_r10
 framework = arduino
 board_build.filesystem = littlefs
-board_build.partitions = default.csv
+board_build.partitions = huge_app.csv
 
 monitor_speed = 115200
 upload_speed = 921600
@@ -28,14 +28,17 @@ monitor_filters = esp32_exception_decoder
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     hideakitai/PCA95x5@^0.1.1
-	https://github.com/hspsh/commonFwUtils
-	https://github.com/cr1tbit/alfalog
+	https://github.com/cr1tbit/alfalog#4897907
+	https://github.com/hspsh/commonFwUtils#1a2680f
+    https://github.com/cr1tbit/toml11.git#cbd4df7
 
 [env:antcontroller-local]
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     hideakitai/PCA95x5@^0.1.1
-    fmtlib/fmt@^8.1.1
-    adafruit/Adafruit SSD1306@^2.5.7
 	alfalog
     commonFwUtils
+    https://github.com/ToruNiina/toml11.git#v3.7.0
+
+    fmtlib/fmt@^8.1.1
+    adafruit/Adafruit SSD1306@^2.5.7
