refactor singletons for multiple include, enable /BUT endpoint

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,17 +28,26 @@ monitor_filters = esp32_exception_decoder
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     hideakitai/PCA95x5@^0.1.1
-	https://github.com/cr1tbit/alfalog#4897907
+	https://github.com/cr1tbit/alfalog#a99ae59fd9c6d55ba71b9e3be77753616b40c6ff
 	https://github.com/hspsh/commonFwUtils#1a2680f
-    https://github.com/cr1tbit/toml11.git#cbd4df7
+    https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
+
+build_flags = 
+    -DOLED_VERSION=OLED_128x64
 
 [env:antcontroller-local]
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
+    ; git@github.com:serek4/ESPAsyncWebServer.git may be used at some point
     hideakitai/PCA95x5@^0.1.1
 	alfalog
     commonFwUtils
-    https://github.com/ToruNiina/toml11.git#v3.7.0
+    https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
 
     fmtlib/fmt@^8.1.1
     adafruit/Adafruit SSD1306@^2.5.7
+
+build_flags = 
+    ; -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    -DWAIT_FOR_SERIAL
+    -DOLED_VERSION=OLED_128x64
