--- a/platformio.ini
+++ b/platformio.ini
@@ -40,14 +40,10 @@ lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     ; git@github.com:serek4/ESPAsyncWebServer.git may be used at some point
     hideakitai/PCA95x5@^0.1.1
-	alfalog
-    commonFwUtils
+	symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/alfalog
+    symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/commonFwUtils
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
-
-    fmtlib/fmt@^8.1.1
-    adafruit/Adafruit SSD1306@^2.5.7
 
 build_flags = 
     ; -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    -DWAIT_FOR_SERIAL
     -DOLED_VERSION=OLED_128x64
