--- a/platformio.ini
+++ b/platformio.ini
@@ -24,11 +24,13 @@ upload_speed = 921600
 build_type = debug
 monitor_filters = esp32_exception_decoder
 
+extra_scripts = merge_bin_utils.py
+
 [env:antcontroller]
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     hideakitai/PCA95x5@^0.1.1
-	https://github.com/cr1tbit/alfalog#a99ae59fd9c6d55ba71b9e3be77753616b40c6ff
+	https://github.com/cr1tbit/alfalog#v1.0.0
 	https://github.com/hspsh/commonFwUtils#1a2680f
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
 
