--- a/platformio.ini
+++ b/platformio.ini
@@ -33,9 +33,10 @@ lib_deps =
 	https://github.com/cr1tbit/alfalog#v1.0.0
 	https://github.com/hspsh/commonFwUtils#1a2680f
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
-
+    https://github.com/cr1tbit/ESP-WiFiSettings#12a908c8c684714636ba6f3d66171dc873ee5dad
 build_flags = 
     -DOLED_VERSION=OLED_128x64
+    -DWIFISETTINGS_USE_LITTLEFS
 
 [env:antcontroller-local]
 lib_deps =
@@ -45,7 +46,9 @@ lib_deps =
 	symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/alfalog
     symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/commonFwUtils
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
+    https://github.com/cr1tbit/ESP-WiFiSettings#12a908c8c684714636ba6f3d66171dc873ee5dad
 
 build_flags = 
     ; -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -DOLED_VERSION=OLED_128x64
+    -DWIFISETTINGS_USE_LITTLEFS
