frontend kinda works

--- a/data/buttons.conf
+++ b/data/buttons.conf
@@ -12,6 +12,13 @@ antctrl = "SINK1"
 name =    "QROS"
 descr =   ""
 
+[[cond]]
+input    = "Z1-1"
+when     = 0
+disable  = "Z2-7"
+
+[[cond]]
+
 [buttons]
 
 [[buttons.a]]
