some code cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
+name = antControllerFw
+semver = 0.11.1
 default_envs = antcontroller
 
 [env]
@@ -26,29 +28,31 @@ monitor_filters = esp32_exception_decoder
 
 extra_scripts = merge_bin_utils.py
 
-[env:antcontroller]
-lib_deps =
-    https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
-    hideakitai/PCA95x5@^0.1.1
-	https://github.com/cr1tbit/alfalog#v1.1.1
-	https://github.com/hspsh/commonFwUtils#1a2680f
-    https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
-    https://github.com/cr1tbit/ESP-WiFiSettings#12a908c8c684714636ba6f3d66171dc873ee5dad
-build_flags = 
-    -DOLED_VERSION=OLED_128x64
-    -DWIFISETTINGS_USE_LITTLEFS
-
-[env:antcontroller-local]
 lib_deps =
     https://github.com/steff393/ESPAsyncWebServer#2e744c5c6d258d1fcc68b5554514d739531d8d38
     ; git@github.com:serek4/ESPAsyncWebServer.git may be used at some point
     hideakitai/PCA95x5@^0.1.1
-	symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/alfalog
-    symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/commonFwUtils
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
     https://github.com/cr1tbit/ESP-WiFiSettings#12a908c8c684714636ba6f3d66171dc873ee5dad
 
 build_flags = 
-    ; -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -DOLED_VERSION=OLED_128x64
     -DWIFISETTINGS_USE_LITTLEFS
+    -DFW_REV=\"${platformio.semver}\"
+    -DPROJECT_NAME=\"${platformio.name}\"
+
+[env:antcontroller]
+lib_deps =
+	${env.lib_deps}
+	https://github.com/cr1tbit/alfalog#v1.1.1
+	https://github.com/hspsh/commonFwUtils#1a2680f
+
+[env:antcontroller-local]
+lib_deps =
+	${env.lib_deps}
+	symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/alfalog
+    symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/commonFwUtils
+
+; build_flags = 
+;     ${env.build_flags}
+;     -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
