--- a/data/buttons.conf
+++ b/data/buttons.conf
@@ -1,75 +1,139 @@
 version = "0.1.0"
 
+
 [[pin]]
 sch =     "Z1-1"
-antctrl = "SINK1"
+antctrl = "OC1"
 name =    "QROS"
+descr =   ""
+
+[[pin]]
+sch =     "Z1-8"
+antctrl = "OC2"
+name =    "QRPS"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-1"
+antctrl = "SINK1"
+name =    "160m"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-2"
+antctrl = "SINK2"
+name =    "80mm"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-3"
+antctrl = "SINK3"
+name =    "40m"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-4"
+antctrl = "SINK4"
+name =    "30m"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-5"
+antctrl = "SINK5"
+name =    "7/12m"
 descr =   ""
 
 [[pin]]
 sch =     "Z2-7"
-antctrl = "SINK1"
-name =    "QROS"
+antctrl = "SINK6"
+name =    "KT+STK"
 descr =   ""
 
-[[cond]]
-input    = "Z1-1"
-when     = 0
-disable  = "Z2-7"
-
-[[cond]]
-
+[[pin]]
+sch =     "Z2-10"
+antctrl = "SINK7"
+name =    "KT34XA"
+descr =   ""
 [buttons]
 
+[[pin]]
+sch =     "Z2-9"
+antctrl = "SINK8"
+name =    "15m DWN"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-8"
+antctrl = "SINK9"
+name =    "15m UP"
+descr =   ""
+
+[[pin]]
+sch =     "Z2-6"
+antctrl = "SINK10"
+name =    "15m Stack"
+descr =   ""
+
+
 [[buttons.a]]
-name =  "160m VERTICAL" 
+name =  "160m VERTICAL"
+api = "ANT_160m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z1-1" ]
 
 [[buttons.a]]
 name =  "80m DIPOLE"
+api = "ANT_80m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-2" ]
 
 [[buttons.a]]
 name =  "40m YAGI"
+api = "ANT_40m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-3" ]
 
 [[buttons.a]]
 name =  "30m YAGI"
+api = "ANT_30m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-4" ]
 
 [[buttons.a]]
 name =  "12-17m YAGI"
+api = "ANT_17/12m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-5" ]
 
 [[buttons.a]]
 name =  "20-15-10 KT34XA"
+api = "ANT_KT34XA"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-7", "Z2-10", "Z1-1" ]
 
 [[buttons.a]]
 name =  "15m 7EL DWN"
+api = "ANT_15m_DOWN"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-9", "Z1-8" ]
 
 [[buttons.a]]
 name =  "15m 7EL UP"
+api = "ANT_15m_UP"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-6", "Z1-8" ]
 
 [[buttons.a]]
 name =  "15m STACKER"
+api = "ANT_15m_Stack"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-6", "Z1-8" ]
 
 [[buttons.a]]
 name =  "15m STACKER+KT34XA"
+api = "ANT_KT+STK"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z2-6", "Z2-7", "Z1-1" ]
 
 
 [[buttons.b]]
