--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,8 @@ build_flags =
     -DFW_REV=\"${platformio.semver}\"
     -DPROJECT_NAME=\"${platformio.name}\"
 
+frontend_addr = https://api.github.com/repos/loaymoolb/antcontroller-react/actions/artifacts/956151685/zip
+
 [env:antcontroller]
 lib_deps =
 	${env.lib_deps}
