--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,11 @@
 
 [platformio]
 name = antControllerFw
-semver = 0.11.1
+semver = 0.11.2
 default_envs = antcontroller
 
 [env]
-platform = espressif32
+platform = espressif32@5.4.0 #newer version produces some errors
 board = antcontroller_r10
 framework = arduino
 board_build.filesystem = littlefs
