new frontend attempt

--- a/.github/workflows/create-binary.yml
+++ b/.github/workflows/create-binary.yml
@@ -3,7 +3,7 @@ name: Build firmware
 on:
     push:
       branches: ['main']
-      paths: ['src/**']
+      paths: ['src/**', 'platformio.ini']
 
 jobs:
   build:
