new new frontend attempt

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
     -DFW_REV=\"${platformio.semver}\"
     -DPROJECT_NAME=\"${platformio.name}\"
 
-frontend_addr = https://github.com/loaymoolb/antcontroller-react/suites/18026631338/artifacts/1037566298/zip
+frontend_addr = https://api.github.com/repos/loaymoolb/antcontroller-react/actions/artifacts/1037566298/zip
 
 [env:antcontroller]
 lib_deps =
