--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ semver = 0.11.3
 default_envs = antcontroller
 
 [env]
-platform = espressif32@5.4.0 #newer version produces some errors.
+platform = espressif32@5.4.0 #newer version produces some errors
 board = antcontroller_r10
 framework = arduino
 board_build.filesystem = littlefs
