work on conditional buttons, refactors, etc

--- a/data/buttons.conf
+++ b/data/buttons.conf
@@ -134,7 +134,8 @@ name =  "15m STACKER+KT34XA"
 api = "ANT_KT+STK"
 descr = ""
 pins = [ "Z2-6", "Z2-7", "Z1-1" ]
-
+disable_on_low = ["Z1-8"]
+disable_on_high = ["Z1-8"]
 
 [[buttons.b]]
 name =  "PA TRCV"
