little tweaks to app logic

--- a/data/buttons.conf
+++ b/data/buttons.conf
@@ -1,4 +1,4 @@
-version = "0.1.0"
+version = "0.1.8"
 
 
 [[pin]]
@@ -22,7 +22,7 @@ descr =   ""
 [[pin]]
 sch =     "Z2-2"
 antctrl = "SINK2"
-name =    "80mm"
+name =    "80m"
 descr =   ""
 
 [[pin]]
@@ -54,7 +54,6 @@ sch =     "Z2-10"
 antctrl = "SINK7"
 name =    "KT34XA"
 descr =   ""
-[buttons]
 
 [[pin]]
 sch =     "Z2-9"
@@ -74,146 +73,248 @@ antctrl = "SINK10"
 name =    "15m Stack"
 descr =   ""
 
+[[pin]]
+sch =     "N1"
+antctrl = "SINK13"
+name =    "6m yagi"
+descr =   ""
+
+
+[[pin]]
+sch =     "Z9-2"
+antctrl = "RL12"
+name =    "PA1"
+descr =   ""
+
+
+
+[[pin]]
+sch =     "ZK1-1"
+antctrl = "RL1"
+name =    "roz"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-2"
+antctrl = "RL2"
+name =    "nieb"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-3"
+antctrl = "RL3"
+name =    "szary"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-4"
+antctrl = "RL4"
+name =    "ziel"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-5"
+antctrl = "RL5"
+name =    "fiol"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-6"
+antctrl = "RL6"
+name =    "pom"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-7"
+antctrl = "RL7"
+name =    "bialy"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-8"
+antctrl = "RL8"
+name =    "czarny"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-9"
+antctrl = "RL9"
+name =    "zol"
+descr =   ""
+
+[[pin]]
+sch =     "ZK1-10"
+antctrl = "RL10"
+name =    "czerw"
+descr =   ""
+
+[[pin]]
+sch =     "R-L"
+antctrl = "SINK15"
+name =    ""
+descr =   ""
+
+[[pin]]
+sch =     "R-R"
+antctrl = "SINK16"
+name =    ""
+descr =   ""
+
+
+[buttons]
 
 [[buttons.a]]
 name =  "160m VERTICAL"
-api = "ANT_160m"
-descr = ""
-pins = [ "Z1-1" ]
+descr = "pionowa"
+pins = [ "Z2-1" ]
 
 [[buttons.a]]
 name =  "80m DIPOLE"
 api = "ANT_80m"
-descr = ""
+descr = "2x20m"
 pins = [ "Z2-2" ]
 
 [[buttons.a]]
 name =  "40m YAGI"
 api = "ANT_40m"
-descr = ""
+descr = "7 MHz"
 pins = [ "Z2-3" ]
 
 [[buttons.a]]
 name =  "30m YAGI"
 api = "ANT_30m"
-descr = ""
+descr = "bez SSB"
 pins = [ "Z2-4" ]
 
 [[buttons.a]]
 name =  "12-17m YAGI"
 api = "ANT_17/12m"
-descr = ""
+descr = "dwupasmowa"
 pins = [ "Z2-5" ]
+
 
 [[buttons.a]]
 name =  "20-15-10 KT34XA"
 api = "ANT_KT34XA"
-descr = ""
+descr = "trzypasmowa"
 pins = [ "Z2-7", "Z2-10", "Z1-1" ]
 
 [[buttons.a]]
 name =  "15m 7EL DWN"
 api = "ANT_15m_DOWN"
-descr = ""
+descr = "tylko dolna"
 pins = [ "Z2-9", "Z1-8" ]
 
 [[buttons.a]]
 name =  "15m 7EL UP"
 api = "ANT_15m_UP"
-descr = ""
-pins = [ "Z2-6", "Z1-8" ]
+descr = "tylko górna"
+pins = [ "Z2-8", "Z1-8" ]
 
 [[buttons.a]]
 name =  "15m STACKER"
 api = "ANT_15m_Stack"
-descr = ""
+descr = "dwie na raz"
 pins = [ "Z2-6", "Z1-8" ]
 
 [[buttons.a]]
-name =  "15m STACKER+KT34XA"
+name =  "15m STACK KT34X"
 api = "ANT_KT+STK"
-descr = ""
-pins = [ "Z2-6", "Z2-7", "Z1-1" ]
-disable_on_low = ["Z1-8"]
-disable_on_high = ["Z1-8"]
+descr = "wszystkie"
+pins = [ "Z2-7", "Z2-6", "Z1-1" ]
+
+
+[[buttons.a]]
+name =  "6m YAGI"
+api = "ANT_6m"
+descr = "nowa"
+pins = [ "N1" ]
+
 
 [[buttons.b]]
 name =  "PA TRCV"
+api = "PA_TRCV"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z9-2" ]
 
 [[buttons.b]]
 name =  "PA PA1 QRP" 
+api = "PA_TRCV"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z9-2" ]
 
 [[buttons.b]]
 name =  "PA PA2 QRO"
+api = "PA_TRCV"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z9-2" ]
 
 [[buttons.b]]
 name =  "PA 2XPA"
+api = "PA_TRCV"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "Z9-2" ]
+
+
 
 [[buttons.c]]
-name =  "R140 160m"
+name =  "R140b 160m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-1", "Z2-1" ]
+disable_on_low = ["Z2-2", "Z2-3","Z2-4","Z2-5","Z2-6","Z2-7","Z2-8","Z2-9","Z2-10"]   
 
 [[buttons.c]]
 name =  "R140 80m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-2", "Z2-2" ]
 
 [[buttons.c]]
 name =  "R140 40m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-3" ]
 
 [[buttons.c]]
 name =  "R140 30m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-4" ]
 
 [[buttons.c]]
 name =  "R140 20m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-5" ]
 
 [[buttons.c]]
-name =  "R140 18m"
+name =  "R140 17m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-6" ]
 
 [[buttons.c]]
 name =  "R140 15m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-7" ]
 
 [[buttons.c]]
 name =  "R140 12m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-8" ]
 
 [[buttons.c]]
 name =  "R140 10m"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-9" ]
 
 [[buttons.c]]
-name =  "EXT"
+name =  "R140 EXT"
 descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+pins = [ "ZK1-10" ]
 
 
 [[buttons.d]]
 name =  "ROT LEFT"
-descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+descr = "- azymut"
+pins = [ "R-L" ]
 
 [[buttons.d]]
 name =  "ROT RIGHT"
-descr = ""
-pins = [ "Z2-7", "Z1-1" ]
+descr = "+ azymut"
+pins = [ "R-R" ]
