--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,6 @@ build_flags =
     -DWIFISETTINGS_USE_LITTLEFS
     -DFW_REV=\"${platformio.semver}\"
     -DPROJECT_NAME=\"${platformio.name}\"
-
 frontend_addr = https://api.github.com/repos/loaymoolb/antcontroller-react/actions/artifacts/1044780644/zip
 
 [env:antcontroller]
@@ -50,12 +49,15 @@ lib_deps =
 	https://github.com/cr1tbit/alfalog#v1.1.6
 	https://github.com/hspsh/commonFwUtils#1a2680f
 
+build_flags = 
+    ${env.build_flags}
+
 [env:antcontroller-local]
 lib_deps =
 	${env.lib_deps}
 	symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/alfalog
     symlink://${sysenv.HOME}/Projects/software/platformio-custom-libs/commonFwUtils
 
-; build_flags = 
-;     ${env.build_flags}
-;     -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+build_flags = 
+    ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=5
