--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 name = antControllerFw
-semver = 0.12.1
+semver = 0.13.2
 default_envs = antcontroller
 
 [env]
@@ -34,7 +34,8 @@ lib_deps =
     hideakitai/PCA95x5@^0.1.1
     https://github.com/cr1tbit/toml11.git#cbd4df71a9f853c50baeedf31c9a106e11409a19
     https://github.com/cr1tbit/ESP-WiFiSettings#12a908c8c684714636ba6f3d66171dc873ee5dad
-    bblanchon/ArduinoJson @ ^6.21.3 
+    bblanchon/ArduinoJson @ ^6.21.3
+    ; esphome/Improv@^1.2.3
 
 build_flags = 
     -DOLED_VERSION=OLED_128x64
