rewrite pin guard feature (break-before-make removed for now)

--- a/data/buttons.conf
+++ b/data/buttons.conf
@@ -160,6 +160,11 @@ antctrl = "SINK16"
 name =    ""
 descr =   ""
 
+[[pin]]
+sch =     "INP1"
+antctrl = "INP1"
+name =    "wejscie 1"
+descr =   ""
 
 [buttons]
 
@@ -261,7 +266,7 @@ pins = [ "Z9-2" ]
 name =  "R140b 160m"
 descr = ""
 pins = [ "ZK1-1", "Z2-1" ]
-disable_on_low = ["Z2-2", "Z2-3","Z2-4","Z2-5","Z2-6","Z2-7","Z2-8","Z2-9","Z2-10"]   
+disable_on_high = ["Z2-2", "Z2-3","Z2-4","Z2-5","Z2-6","Z2-7","Z2-8","Z2-9","Z2-10"]   
 
 [[buttons.c]]
 name =  "R140 80m"
@@ -313,6 +318,7 @@ pins = [ "ZK1-10" ]
 name =  "ROT LEFT"
 descr = "- azymut"
 pins = [ "R-L" ]
+disable_on_high = ["INP5"]
 
 [[buttons.d]]
 name =  "ROT RIGHT"
